--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
-Django==5.1.4
+Django>=5.1.4,<5.1
 pillow==11.0.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
+psycopg2-binary>=2.9.10,<2.10
